# qdrant-mcp-rbac

./: .dockerignore  .gitignore  .yamllint  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEMO.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TRADEMARK.md  server.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/assets/: README.md  demo.tape  mcp-cli-mock.sh
.github/workflows/: ci.yml  docker.yml  label-issues-on-milestone-merge.yml  license-check.yml  release-drafter.yml
demo/: README.md
demo/bootstrap/: .env.example  README.md  pyproject.toml  vectorize.py
demo/client/: .env.example  README.md  agent.py  client.py  config.py  oidc.py  pyproject.toml
demo/data/: finance-2025.md  finance-2026.md  finance-aquise.md  finance.md  it.md  sales.md
demo/docker/: docker-compose.yml
docker/: .env.example  Dockerfile  docker-compose.yml
src/: .env.example  config.py  main.py  pyproject.toml
src/auth/: acl.py  doc_filter.py  jwt_builder.py  models.py  oidc.py
src/mcp_app/: middleware.py  server.py  tools.py
src/qdrant/: client.py  collections.py  meta.py
tests/: test_doc_filter.py  test_facet.py  test_scroll.py
