[project]
name = "qdrant-mcp-rbac"
version = "0.1.0"
description = "FastMCP server exposing Qdrant with OIDC-based role-based access control"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fidonis" }]
dependencies = [
    "fastmcp>=2.3.0",
    "qdrant-client>=1.12.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.30.0",
    "starlette>=1.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RET", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Tests live outside the uv project so they are not copied into the Docker
# image (see docker/Dockerfile's `COPY src/ /app/`). The pyproject lives in
# src/ and pytest's rootdir follows it, so the path is expressed relative to
# src/. `pythonpath = ["."]` keeps `from auth import ...` resolvable.
pythonpath = ["."]
testpaths = ["../tests"]
