[project]
name = "bootstrap"
version = "0.1.0"
description = "Standalone helper that vectorizes Markdown demo data into per-role Qdrant collections"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fidonis" }]
dependencies = [
    "qdrant-client>=1.12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
