[project]
name = "client"
version = "0.1.0"
description = "OIDC-authenticated MCP client with a configurable LLM, talking to the qdrant-mcp-rbac MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fidonis" }]
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.5.0",
    "litellm>=1.52.0",
    "rich>=13.7.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RET", "SIM", "ASYNC"]
